fixed scrollbar visibility

--- a/src/styles/_common/_reset.scss
+++ b/src/styles/_common/_reset.scss
@@ -41,7 +41,3 @@ ul {
 [hidden] {
   display: none !important;
 }
-
-::-webkit-scrollbar { 
-    display: none; 
-}
